[package]
name = "object-store"
version = "0.1.0"
edition = "2021"


[dependencies]
obliviate-core = { version = "0.1.0", git = "https://github.com/twizzler-operating-system/obliviate.git", branch = "nonstatic_lifetime_support" }
chacha20 = { version = "0.9.1", features = ["std", "zeroize"] }
fatfs = { git = "https://github.com/twizzler-operating-system/rust-fatfs.git", branch = "zphrs-rwproxy", version = "0.4.0", features = [
    "std",
    "log_level_info",
    "lfn",
    "alloc",
], default-features = false }
rand = "0.8.5"
async-trait = "0.1.66"
volatile = "0.5"
pci-ids = "0.2.4"
intervaltree = { version = "0.2.7", features = ["serde"] }
